force-app/main/default/objects/Live_Rating__c/Live_Rating__c.object-meta.xml
<CustomObject>
    <label>Live Rating</label>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Live Rating#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Ratings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>