force-app/main/default/objects/Live_Rating__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Agency</valueSetName>
    </valueSet>
</CustomField>