force-app/main/default/objects/Live_Rating__c/fields/BLR_Sub_Instrument_3__c.field-meta.xml
<CustomField>
    <fullName>BLR_Sub_Instrument_3__c</fullName>
    <label>BLR - Sub Instrument 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Instrument_Type_3__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>BLR_Sub_Instrument</valueSetName>
    </valueSet>
</CustomField>