force-app/main/default/objects/Live_Rating__c/fields/Client_since__c.field-meta.xml
<CustomField>
    <fullName>Client_since__c</fullName>
    <label>Client since</label>
    <type>Date</type>
</CustomField>