force-app/main/default/objects/Live_Rating__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>