force-app/main/default/objects/Live_Rating__c/fields/Crore_Million__c.field-meta.xml
<CustomField>
    <fullName>Crore_Million__c</fullName>
    <formula>IF(ISPICKVAL(CurrencyIsoCode, &apos;INR&apos;), &apos;Crore&apos;, &apos;Million&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crore/Million</label>
    <type>Text</type>
</CustomField>