force-app/main/default/objects/Live_Rating__c/fields/Customer_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fee_Type__c</fullName>
    <formula>TExt(Account__r.Customer_Fee_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Fee Type</label>
    <type>Text</type>
</CustomField>