force-app/main/default/objects/Live_Rating__c/fields/Estimated_Annual_Surveillance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Surveillance_Fee__c</fullName>
    <label>Estimated Annual Surveillance  Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>