force-app/main/default/objects/Live_Rating__c/fields/Focus_Group__c.field-meta.xml
<CustomField>
    <fullName>Focus_Group__c</fullName>
    <formula>TEXT(Account__r.Focus_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focus Group</label>
    <type>Text</type>
</CustomField>