force-app/main/default/objects/Live_Rating__c/fields/Government_Type__c.field-meta.xml
<CustomField>
    <fullName>Government_Type__c</fullName>
    <formula>TEXT( Account__r.PSU_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Government Type</label>
    <type>Text</type>
</CustomField>