force-app/main/default/objects/Live_Rating__c/fields/Instrument_type_1__c.field-meta.xml
<CustomField>
    <fullName>Instrument_type_1__c</fullName>
    <label>Instrument Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Instrument_Type_1</valueSetName>
    </valueSet>
</CustomField>