force-app/main/default/objects/Live_Rating__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <formula>TEXT(Account__r.Line_of_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>