force-app/main/default/objects/Live_Rating__c/fields/LT_Rating__c.field-meta.xml
<CustomField>
    <fullName>LT_Rating__c</fullName>
    <label>LT Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_LT_Rating</valueSetName>
    </valueSet>
</CustomField>