force-app/main/default/objects/Live_Rating__c/fields/Rating_Action__c.field-meta.xml
<CustomField>
    <fullName>Rating_Action__c</fullName>
    <label>Rating Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_Rating_Action</valueSetName>
    </valueSet>
</CustomField>