force-app/main/default/objects/Live_Rating__c/fields/Sub_sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_sector__c</fullName>
    <formula>TEXT(Account__r.Sub_Sector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-sector</label>
    <type>Text</type>
</CustomField>