force-app/main/default/objects/Live_Rating__c/fields/Sum_of_Volume_of_Debt__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Volume_of_Debt__c</fullName>
    <formula>Volume_of_Debt_1_Amount__c + Volume_of_Debt_2_Amount__c
+ Volume_of_Debt_3_Amount__c +
Volume_of_Debt_4_Amount__c +
Volume_of_Debt_5_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Volume of Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>