force-app/main/default/objects/Live_Rating__c/fields/Total_Volume_of_Debt_Rated__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume_of_Debt_Rated__c</fullName>
    <label>Total Volume of Debt Rated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>