force-app/main/default/objects/Live_Rating__c/fields/Volume_of_Debt_Category__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Debt_Category__c</fullName>
    <label>Volume of Debt Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GP_VoD_Category_for_SECG</valueSetName>
    </valueSet>
</CustomField>