force-app/main/default/objects/Live_Rating__c/fields/Volume_of_Debt_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Debt_Outstanding__c</fullName>
    <label>Volume of Debt Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>