force-app/main/default/objects/Live_Rating__c/validationRules/Validation_for_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(LT_Rating__c,&quot;&quot;), ISPICKVAL(MT_Rating__c,&quot;&quot;),
				ISPICKVAL(ST_Rating__c,&quot;&quot;),
			ISPICKVAL(Other_Ratings__c,&quot;&quot;)	
					)</errorConditionFormula>
    <errorMessage>Please Fill at least one rating.</errorMessage>
</ValidationRule>