force-app/main/default/objects/Live_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Agency__c</columns>
    <columns>ST_Rating__c</columns>
    <columns>LT_Rating__c</columns>
    <columns>Client_Status__c</columns>
    <columns>Government_Type__c</columns>
    <columns>Instrument_type_1__c</columns>
    <columns>Instrument_type_2__c</columns>
    <columns>Instrument_Type_3__c</columns>
    <columns>Instrument_Type_4__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Sector__c</columns>
    <columns>Sub_sector__c</columns>
    <columns>Total_Volume_of_Debt_Rated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>